# bopa_logger

./: CMakeLists.txt  Readme.md  package.xml  setup.cfg  setup.py
config/: config.yaml
launch/: logger.launch.py
src/logger_collector/: LogCollector.py
src/nodes/: run.py
